# pythonAquaculture

./: .env.local.example  .gitignore  .pre-commit-config.yaml  ANTIGRAVITY_GUIDE.md  CNKI_fulltext_test_三文鱼.txt  CNKI_python.tsv  CNKI_三文鱼.tsv  CNKI_机器人.tsv  DEVELOPMENT.md  ONBOARDING.md  OPTIMIZATIONS.md  README.md  VS_CODE_SETUP.md  _check_syntax.py  _convert_docx.py  _convert_docx2.py  _extract_thesis.py  _thesis_add_content.py  _thesis_final_review.py  _thesis_format_check.py  _thesis_format_check2.py  _thesis_format_fix.py  _thesis_probe.py  _thesis_probe2.py  _thesis_probe3.py  _thesis_probe4.py  _thesis_sync_fix.py  _thesis_sync_fix2.py  _thesis_sync_fix3.py  _thesis_verify_content.py  _thesis_verify_fix.py  _verify_changes.py  app.py  app_old_streamlit.py  bootstrap.ps1  check_schema.py  config_mgr.py  debug_check_dup.py  fix_thesis_format.py  internship_manual_filled_rows.docx  (+33 more)
.github/workflows/: ci.yml
agent-skills/crawler-troubleshoot/: SKILL.md
agent-skills/python-code-review/: SKILL.md
agent-skills/release-readiness-check/: SKILL.md
company_crawler_project/: .gitignore  README.md  main.py  requirements.txt  runner.py
company_crawler_project/config/: sources.json
company_crawler_project/crawlers/: __init__.py  cnki_crawler.py  moa_fishery_crawler.py  scholar_crawler.py  utils.py
company_crawler_project/storage/: __init__.py  db.py
config/: sites.json
crawlers/: cnki_crawler.py  moa_fishery_crawler.py  scholar_crawler.py  utils.py
docs/: campus_teacher_model_tutorial.md  defense_live_demo_script.md  group_meeting_ocr_showcase.md  ubuntu24_teacher_demo.md  ubuntu_ocr_deployment_guide.md  ubuntu_ocr_wsl_verification.md
finetune/: RUN_GUIDE.md  evaluate_model.py  predict_baseline.py  predict_finetuned.py  prepare_dataset.py  setup_llamafactory.ps1
finetune/configs/: qwen_qlora_predict.yaml  (+1 more)
fish_intel_mvp/: .env.example  CNKI_aquaculture.tsv  CNKI_三文鱼.tsv  CNKI_水产养殖.tsv  CNKI_螃蟹.tsv  requirements.txt  run_one.py  schema.sql
query/: cli_query.py  dashboard_queries.py
scripts/: build_group_meeting_ocr_demo.py  create_linux_friendly_zip.py  download_mineru_models.py  prepare_teacher_demo.ps1  prepare_ubuntu_ocr_package.ps1  run_ocr_demo.sh  setup_ubuntu24_ocr.sh  test_teacher_model.py
static/: demo_data.js
storage/: db.py
templates/: index.html  salmon_analysis.html
tests/: test_config_storage.py  test_crawl_moa_prices.py  test_crawl_salmon.py  test_extract_rules.py  test_import_offline_prices.py  test_mineru_parser.py  test_salmon_enricher.py  test_sft_generator.py  test_storage.py  test_utils.py
(+25 files in other folders)
